@@ -1,25 +1,35 @@
-"name: CI",
-"on:",
-"  push:",
-"    branches: [ master ]",
-"  pull_request:",
-"    branches: [ master ]",
-"  workflow_dispatch:",
-"jobs:",
-"  build:",
-"    runs-on: ${{ matrix.os }}",
-"    strategy:",
-"      matrix:",
-"        os: ['ubuntu-latest', 'windows-latest']",
-"        perl: [ '5.32', '5.30' ]",
-"",
-"    name: Perl ${{ matrix.perl }} on ${{ matrix.os }}",
-"    steps:",
-"      - uses: actions/checkout@v2",
-"      - name: Set up perl",
-"        uses: shogo82148/actions-setup-perl@v1",
-"        with:",
-"          perl-version: ${{ matrix.perl }}",
-"      - run: perl -V",
-"      - run: cpanm --installdeps .",
-"      - run: prove -lv t",
+name: CI
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+  workflow_dispatch:
+jobs:
+  ubuntu:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest, windows-latest ]
+        perl-version: [ '5.32', '5.30' ]
+        include:
+          - perl-version: '5.30'
+            os: ubuntu-latest
+            release-test: false
+            coverage: true
+    container: perl:${{ matrix.perl-version }}
+    steps:
+      - uses: actions/checkout@v2
+      - run: cpanm -n --installdeps .
+      - run: perl -V
+      - name: Run tests (no coverage)
+        if: ${{ !matrix.coverage }}
+        run: prove -l t
+      - name: Run tests (with coverage)
+        if: ${{ matrix.coverage }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          cpanm -n Devel::Cover::Report::Coveralls
+          cover -test -report Coveralls
